Refactor codebase and use S-experssion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "lisp_rs"
+name = "scheme_rs"
 version = "0.1.0"
-authors = ["logger <157056982@qq.com>"]
+authors = ["logger <dengtl17@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
